Shape parts now fly off left or right

--- a/Assets/Scripts/StackFall.asmdef
+++ b/Assets/Scripts/StackFall.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "StackFall",
     "rootNamespace": "StackFall",
-    "references": [],
+    "references": [
+        "GUID:36a338ced22403548ba814cc5ecfec71"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
